--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,7 @@ config/database.yml
 
 # Ignore TDD
 test/*
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
